--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,8 @@ body {
   margin: 0;
   font-family: 'Inter var', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: 100%;
+  overflow-x: hidden;
 }
 a {
   color: inherit;
